--- a/vpc-fullstack-01.yaml
+++ b/vpc-fullstack-01.yaml
@@ -42,10 +42,13 @@ Parameters:
     Type: String
     AllowedValues:
       - "1 tier | 1 subnet | public"
+      - "1 tier | 2 subnet | public"
       - "2 tier | 1 subnet public | 1 subnet private | 1 nat"
       - "2 tier | 2 subnets public | 2 subnets private | 1 nat"
       - "2 tier | 2 subnets public | 2 subnets private | 2 nat"
-    Default: "1 tier | 1 subnet | public"
+      - "3 tier | 1 subnet public | 1 subnet private | 1 subnet database | 1 nat"
+      - "3 tier | 2 subnets public | 2 subnets private | 2 subnets database | 2 nat"
+    Default: "1 tier | 2 subnet | public"
   VpcCidr:
     AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
@@ -57,28 +60,58 @@ Parameters:
       Comma-delimited list of CIDR blocks for subnets located in AZ's within the current AWS Regions (e.g. 10.0.1.0/24, 10.0.2.0/24, 10.0.3.0/24).
       Note: The logical order is preserved and must be greater than or equal to the number of subnet selected in the network design pattern field.
     Type: CommaDelimitedList
-    Default: "10.0.1.0/24, 10.0.2.0/24, 10.0.3.0/24, 10.0.4.0/24"
+    Default: "10.0.1.0/24, 10.0.2.0/24, 10.0.3.0/24, 10.0.4.0/24, 10.0.5.0/24, 10.0.6.0/24"
 
 Conditions:
   # parameter conditionals
   1Tier1SubPublic: !Equals [!Ref NetworkDesignPatterns, "1 tier | 1 subnet | public"]
-  1Tier2SubPublic: !Equals [!Ref NetworkDesignPatterns, "2 tier | 1 subnet public | 1 subnet private | 1 nat"]
+  1Tier2SubPublic: !Equals [!Ref NetworkDesignPatterns, "1 tier | 2 subnet | public"]
+  2Tier1SubPublicPrivate1Nat: !Equals [!Ref NetworkDesignPatterns, "2 tier | 1 subnet public | 1 subnet private | 1 nat"]
   2Tier2SubPublicPrivate1Nat: !Equals [!Ref NetworkDesignPatterns, "2 tier | 2 subnets public | 2 subnets private | 1 nat"]
   2Tier2SubPublicPrivate2Nat: !Equals [!Ref NetworkDesignPatterns, "2 tier | 2 subnets public | 2 subnets private | 2 nat"]
+  3Tier1SubPublicPrivate1Nat: !Equals [!Ref NetworkDesignPatterns, "3 tier | 1 subnet public | 1 subnet private | 1 subnet database | 1 nat"]
+  3Tier2SubPublicPrivate2Nat: !Equals [!Ref NetworkDesignPatterns, "3 tier | 2 subnets public | 2 subnets private | 2 subnets database | 2 nat"]
   # template conditionals
   1Subnet: !Or
     - !Condition 1Tier1SubPublic
     - !Condition 1Tier2SubPublic
+    - !Condition 2Tier1SubPublicPrivate1Nat
     - !Condition 2Tier2SubPublicPrivate1Nat
     - !Condition 2Tier2SubPublicPrivate2Nat
+    - !Condition 3Tier1SubPublicPrivate1Nat
+    - !Condition 3Tier2SubPublicPrivate2Nat
   2Subnet: !Or
     - !Condition 1Tier2SubPublic
     - !Condition 2Tier2SubPublicPrivate1Nat
     - !Condition 2Tier2SubPublicPrivate2Nat
+    - !Condition 3Tier2SubPublicPrivate2Nat
   1Nat: !Or
+    - !Condition 2Tier1SubPublicPrivate1Nat
     - !Condition 2Tier2SubPublicPrivate1Nat
     - !Condition 2Tier2SubPublicPrivate2Nat
-  2Nat: !Equals [!Ref NetworkDesignPatterns, "2 tier | 2 subnets public | 2 subnets private | 2 nat"]
+    - !Condition 3Tier1SubPublicPrivate1Nat
+    - !Condition 3Tier2SubPublicPrivate2Nat
+  2Nat: !Or
+    - !Condition 2Tier2SubPublicPrivate2Nat
+    - !Condition 3Tier2SubPublicPrivate2Nat
+  1Tier1Sub: !Or
+    - !Condition 1Subnet
+    - !Condition 2Subnet
+  1Tier2Sub: !Or
+    - !Condition 2Subnet
+    - !Condition 1Tier2SubPublic
+  2Tier1Sub: !Or
+    - !Condition 1Subnet
+    - !Condition 2Tier1SubPublicPrivate1Nat
+    - !Condition 2Tier2SubPublicPrivate1Nat
+    - !Condition 2Tier2SubPublicPrivate2Nat
+    - !Condition 3Tier1SubPublicPrivate1Nat
+    - !Condition 3Tier2SubPublicPrivate2Nat
+  2Tier2Sub: !Or
+    - !Condition 2Subnet
+    - !Condition 2Tier2SubPublicPrivate1Nat
+    - !Condition 2Tier2SubPublicPrivate2Nat
+    - !Condition 3Tier2SubPublicPrivate2Nat
 
 Resources:
   Vpc:
@@ -120,8 +153,9 @@ Resources:
       GatewayId: !Ref InternetGateway
   
   # SUBNETS
+  # PUBLIC SUBNETS
   PublicAZASubnet:
-    Condition: 1Subnet
+    Condition: 1Tier1Sub
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref Vpc
@@ -136,7 +170,7 @@ Resources:
         - Key: Type
           Value: "Managed by AWS Cloudformation"
   PublicAZBSubnet:
-    Condition: 2Subnet
+    Condition: 1Tier2Sub
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref Vpc
@@ -151,8 +185,9 @@ Resources:
         - Key: Type
           Value: "Managed by AWS Cloudformation"
   
+  # PRIVATE SUBNETS
   PrivateAZASubnet:
-    Condition: 1Subnet
+    Condition: 2Tier1Sub
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref Vpc
@@ -166,7 +201,7 @@ Resources:
         - Key: Type
           Value: "Managed by AWS Cloudformation"
   PrivateAZBSubnet:
-    Condition: 2Subnet
+    Condition: 2Tier2Sub
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref Vpc
@@ -179,6 +214,8 @@ Resources:
           Value: !Ref EnvironmentName
         - Key: Type
           Value: "Managed by AWS Cloudformation"
+
+  # DATABASE SUBNETS
   
   # ROUTE TABLE
   PublicRouteTable:
@@ -207,28 +244,28 @@ Resources:
         
   # ROUTE ASSOC
   PublicRouteTableAssociation1:
-    Condition: 1Subnet
+    Condition: 1Tier1Sub
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PublicAZASubnet
       RouteTableId: !Ref PublicRouteTable
 
   PublicRouteTableAssociation2:
-    Condition: 2Subnet
+    Condition: 1Tier2Sub
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PublicAZBSubnet
       RouteTableId: !Ref PublicRouteTable
 
   PrivateRouteTableAssociation1:
-    Condition: 1Subnet
+    Condition: 2Tier1Sub
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PrivateAZASubnet
       RouteTableId: !Ref PrivateRouteTable
 
   PrivateRouteTableAssociation2:
-    Condition: 2Subnet
+    Condition: 2Tier2Sub
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PrivateAZBSubnet
@@ -298,19 +335,19 @@ Outputs:
     Value: !Ref Vpc
   VpcCidr:
     Value: !Ref VpcCidr
-  SubnetsCidrBlock:
-    Value: !Join
-      - ","
-      - !Ref SubnetsCidrBlock
-  PublicAZASubnet:
-    Condition: 1Subnet
-    Value: !Ref PublicAZASubnet
-  PublicAZBSubnet:
-    Condition: 2Subnet
-    Value: !Ref PublicAZBSubnet
-  PrivateAZASubnet:
-    Condition: 1Subnet
-    Value: !Ref PrivateAZASubnet
-  PrivateAZBSubnet:
-    Condition: 2Subnet
-    Value: !Ref PrivateAZBSubnet
+  # SubnetsCidrBlock:
+  #   Value: !Join
+  #     - ","
+  #     - !Ref SubnetsCidrBlock
+  # PublicAZASubnet:
+  #   Condition: 1Subnet
+  #   Value: !Ref PublicAZASubnet
+  # PublicAZBSubnet:
+  #   Condition: 2Subnet
+  #   Value: !Ref PublicAZBSubnet
+  # PrivateAZASubnet:
+  #   Condition: 1Subnet
+  #   Value: !Ref PrivateAZASubnet
+  # PrivateAZBSubnet:
+  #   Condition: 2Subnet
+  #   Value: !Ref PrivateAZBSubnet
