--- a/vpc-fullstack-01.yaml
+++ b/vpc-fullstack-01.yaml
@@ -4,6 +4,7 @@
 # "2 tier | 1 subnet public | 1 subnet private | 1 nat"
 # "2 tier | 2 subnets public | 2 subnets private | 1 nat"
 # "3 tier | 1 subnet public | 1 subnet private | 1 subnet database | 1 nat"
+# "3 tier | 2 subnets public | 2 subnets private | 2 subnets database | 1 nat"
 
 AWSTemplateFormatVersion: 2010-09-09
 
@@ -47,6 +48,7 @@ Parameters:
       - "2 tier | 1 subnet public | 1 subnet private | 1 nat"
       - "2 tier | 2 subnets public | 2 subnets private | 1 nat"
       - "3 tier | 1 subnet public | 1 subnet private | 1 subnet database | 1 nat"
+      - "3 tier | 2 subnets public | 2 subnets private | 2 subnets database | 1 nat"
     Default: "1 tier | 2 subnet | public"
   VpcCidr:
     AllowedPattern: "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$"
@@ -68,6 +70,7 @@ Conditions:
   2Tier1SubPublicPrivate1Nat: !Equals [!Ref NetworkDesignPatterns, "2 tier | 1 subnet public | 1 subnet private | 1 nat"]
   2Tier2SubPublicPrivate1Nat: !Equals [!Ref NetworkDesignPatterns, "2 tier | 2 subnets public | 2 subnets private | 1 nat"]
   3Tier1SubPublicPrivate1Nat: !Equals [!Ref NetworkDesignPatterns, "3 tier | 1 subnet public | 1 subnet private | 1 subnet database | 1 nat"]
+  3Tier2SubPublicPrivate1Nat: !Equals [!Ref NetworkDesignPatterns, "3 tier | 2 subnets public | 2 subnets private | 2 subnets database | 1 nat"]
   # template conditionals
   1Subnet: !Or
     - !Condition 1Tier1SubPublic
@@ -75,13 +78,16 @@ Conditions:
     - !Condition 2Tier1SubPublicPrivate1Nat
     - !Condition 2Tier2SubPublicPrivate1Nat
     - !Condition 3Tier1SubPublicPrivate1Nat
+    - !Condition 3Tier2SubPublicPrivate1Nat
   2Subnet: !Or
     - !Condition 1Tier2SubPublic
     - !Condition 2Tier2SubPublicPrivate1Nat
+    - !Condition 3Tier2SubPublicPrivate1Nat
   1Nat: !Or
     - !Condition 2Tier1SubPublicPrivate1Nat
     - !Condition 2Tier2SubPublicPrivate1Nat
     - !Condition 3Tier1SubPublicPrivate1Nat
+    - !Condition 3Tier2SubPublicPrivate1Nat
   1Tier: !Or 
     - !Condition 1Tier1SubPublic
     - !Condition 1Tier2SubPublic
@@ -89,8 +95,10 @@ Conditions:
     - !Condition 2Tier1SubPublicPrivate1Nat
     - !Condition 2Tier2SubPublicPrivate1Nat
     - !Condition 3Tier1SubPublicPrivate1Nat
-  3Tier: !Or 
+    - !Condition 3Tier2SubPublicPrivate1Nat
+  3Tier: !Or
     - !Condition 3Tier1SubPublicPrivate1Nat
+    - !Condition 3Tier2SubPublicPrivate1Nat
   # Very complicated logic but it works!
   1Tier1Sub: !Or
     - !Condition 1Subnet
